# axl

./: CMakeLists.txt  Makefile  axl.code  axl.txt
cmake/cli/: CLIConfig.cmake
cmake/core/: CoreConfig.cmake
cmake/std/: CompilerOptions.cmake  Testing.cmake
include/axl/core/: dag.h  taxonomy.h  token.h  trie.h
include/axl/core/axml/: parser.h
include/axl/core/concepts/: mapping.h
include/axl/core/integration/: trie_dag.h
include/axl/core/runtime/: collector.h  event_bus.h
include/axl/core/utils/: token.h
scripts/: axl.sh  bootstrap.sh  dancer.sh  qa_bootstrap.sh
src/cli/: CMakeLists.txt  main.c
src/core/: CMakeLists.txt  dag.c  trie.c
src/core/axml/: xml_parser.c
src/core/integration/: axml_integration.c  trie_dag.c
src/core/runtime/: collector.c  event_bus.c
src/core/trie/: trie.c
